# tg_mail_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  attachments.py  config.py  docker-compose.yml  mail_client.py  main.py  pyproject.toml  summarizer.py
